<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Journal</string>

		<string name="Previous">Previous</string>
		<string name="Next">Next</string>

		<string name="PaginatorDisplayingEntries">Displaying entries</string>
		<string name="PaginatorOf">of</string>

		<string name="QuickInputTitle">New Journal entry</string>
		<string name="QuickInputSubmit">Save</string>
		<string name="QuickInputCancel">Cancel</string>
		<string name="QuickInputTagHint">Tag the entry</string>
		<string name="QuickInputContentHint">Write about anything you like!</string>
		<string name="QuickInputSaved">Your entry has been saved.</string>
		<string name="QuickInputSubmitNoBody">You haven\'t written anything that could be saved!</string>
		<string name="QuickInputUpdated">The entry has been updated.</string>

		<string name="MainTitle">Your latest entries</string>
		<string name="MainNewButtonLabel">New Entry</string>
		<string name="MainNoEntries">
		Welcome to your Journal!\n\n
		It is currently empty. Once you start to fill it out, this is were your entries will be shown.\n
		You can enter new entries either by opening this screen and hitting the <i>New entry</i> button, or from anywhere on your phone by long-pressing the search button!\n\n
		If you wish to know more, try checking out\n<i>Menu > About</i>!\n\n
		That\'s it! We hope you enjoy filling out your new Journal!
		</string>
		
		<string name="EntryLongClickTitle">Entry options</string>
		<string name="EntryLongClickEdit">Edit</string>
		<string name="EntryLongClickDelete">Delete</string>
		<string name="EntryLongClickShare">Share</string>
		<string name="EntryLongClickCopyToClipboard">Copy to clipboard</string>
		<string name="EntryLongClickShareTitle">Share your entry with</string>
		<string name="EntryConfirmDeleteTitle">Confirm delete</string>
		<string name="EntryConfirmDelete">Are you sure you want to delete this entry? Deleted entries cannot be recovered!</string>
		<string name="EntryDeleted">Entry deleted</string>
		<string name="EntryClickForMore"><b>...</b></string>
		
		<string name="PreferencesTitle">Preferences</string>
		<string name="PreferencesHeaderGeneral">General settings</string>
		<string name="PreferencesHeaderInput">Input settings</string>
		<string name="PreferencesHeaderSecurity">Security and privacy settings</string>
		
		<string name="PreferencesItemGeneralShorten">Shorten entries</string>
		<string name="PreferencesItemGeneralShortenSubOff">Entries will be shown in full length</string>
		<string name="PreferencesItemGeneralShortenSubOn">Entries will be shown shortened</string>
		<string name="PreferencesItemGeneralShortenAmount">Length of shortened entry</string>
		<string name="PreferencesItemGeneralShortenAmountSub">Maximum number of characters to show</string>
		<string name="PreferencesItemGeneralEntriesPerPage">Entries per page</string>
		<string name="PreferencesItemGeneralEntriesPerPageSub">Number of entries to show per page</string>
		<string name="PreferencesItemGeneralShowLocation">Show location</string>
		<string name="PreferencesItemGeneralShowLocationSubOff">Your current location will not be show atop the main view</string>
		<string name="PreferencesItemGeneralShowLocationSubOn">Your current location will be show atop the main view</string>
		
		<string name="PreferencesItemInputAutocomplete">Suggest tags</string>
		<string name="PreferencesItemInputAutocompleteSubOff">Tags will not be suggested during input</string>
		<string name="PreferencesItemInputAutocompleteSubOn">Tags will be suggested during input</string>
		<string name="PreferencesItemInputRememberLast">Remember last tag</string>
		<string name="PreferencesItemInputRememberLastSubOff">Last entered tag will not be remembered</string>
		<string name="PreferencesItemInputRememberLastSubOn">Last entered tag will be automatically inserted</string>
		<string name="PreferencesItemSecurityPasswordEnabled">Ask for password</string>
		<string name="PreferencesItemSecurityPasswordEnabledSubOff">No password is required</string>
		<string name="PreferencesItemSecurityPasswordEnabledSubOn">A password is required. Note that if you forget your password, you will not be able to access your entries!</string>
		<string name="PreferencesItemSecurityPassword">Set password</string>
		<string name="PreferencesItemSecurityPasswordSub">Choose a strong password</string>
		
		<string name="SearchHint">Search Journal</string>
		<string name="SearchDescription">Search your Journal for tags and entries matching the query.</string>
		<string name="SearchNoMatches">No results</string>
		<string name="SearchContainingTag">Tags containing the query</string>
		<string name="SearchContainingText">Entries containing the query</string>
		
		<string name="AboutTitle">About</string>
		<string name="AboutAppTitle">Application info</string>
		<string name="AboutAppName">Name</string>
		<string name="AboutAppWebsite">Forum link</string>
		<string name="AboutPackageName">Package name</string>
		<string name="AboutAppVersion">Version</string>
		<string name="AboutAppAuthor">Author</string>
		<string name="AboutAppAuthorEmail">Contact author via email</string>
		<string name="AboutAppMarket">View app on market</string>
		<string name="AboutAppAuthorMarket">View author on market</string>
		<string name="AboutAppSourceCode">Source code</string>
		<string name="AboutAAV">Android@Vidi</string>
		<string name="AboutAAVText">
		This application was submitted to the Android@Vidi Android programming contest held
		by the Croatian tech magazine VIDI. More info is available at http://android.vidilab.com
		</string>
		<string name="AboutJournaling">A short guide</string>
		<string name="AboutJournalingText">
		<i>(There are many reasons as to why one should keep a journal. In case you want to read up
		on this, there is a great article on journalling here : http://ririanproject.com/2006/09/22/10-reasons-to-keep-a-journal)</i>\nThis 
		app is meant to provide you with a small and flexible notepad into which you can input your thoughts, observations
		and important events. Giving you the ability to write entries from anywhere in your phone by long-pressing the search button, 
		you can now record thoughts on the fly. And to make sure that things do not get messy, you can tag entries so that entries that 
		have common content (for example those that could be grouped under <i>jokes</i>) can be read in a single thread simply by clicking
		on one of the entries.\nWith 
		this app you can keep track of important things in your life, get better insight into your own thoughts and quickly type down things 
		that you would usually forget.
		</string>
		
		<string name="SingleItemTitle">Showing details for entry #</string>
		<string name="SingleItemEntry">Entry</string>
		<string name="SingleItemTimestamp">Submitted on</string>
		<string name="SingleItemTag">Tag</string>
		<string name="SingleItemSameTag">Entries with the same tag</string>
		
		<string name="SingleItemViewNoData">Hmm, it seems that there was no data passed to this activity.\n
		This should <b>never</b> happen with normal usage.\n
		Please report the issue via email on <a href="mailto:psegina@ymail.com" >psegina@ymail.com</a></string>
		
		<string name="Confirm">Confirm</string>
		<string name="Cancel">Cancel</string>
		
		<string name="CopiedToClipboard">Your text has been copied to the clipboard and can now be pasted anywhere.</string>

		<string name="MenuAbout">About</string>
		<string name="MenuPreferences">Preferences</string>
		<string name="MenuSupport">Support</string>
		<string name="MenuSearch">Search</string>
		
		<string name="SupportTitle">Support</string>
		<string name="SupportIntro">Introduction</string>
		<string name="SupportIntroText">Journal (com.psegina.journal) is a free open source application created mainly in it\'s creator\'s free time. Seeing as I would like to learn more about Android and programming in
		general, I would like you to help me make this application as good as possible. So, on this page I have listed several ways in which you as a user can contribute.
		</string>
		<string name="SupportBugReporting">Suggestions and bug reporting</string>
		<string name="SupportBugReportingText">Believe it or not, we value the voice of our every user. If you have an idea that you think should be implemented
		or you have some suggestions about improving this application, feel free to let us know, either by leaving a comment on the Android Market, or sending us
		an email!\nLikewise, if you find a bug, or something that isn\'t working the way it should be, let us know so that we can fix it as soon as possible!</string>
		<string name="SupportTranslate">Translate</string>
		<string name="SupportTranslateText">Android is an open platform used by people all over the world. Most of these people are not native English speakers
			(and neither am I). So if you have some wicked language skills and would like to translate this app, feel free to contact us!</string>
		<string name="SupportContributeToTheSource">Contributing to the source</string>
		<string name="SupportContributeToTheSourceText">Likewise, if you are a programmer and think some things could be done better, feel free to take a
		look at the source code available on gitHub. And if you get any ideas, be sure to send us the improvements!</string>
		<string name="SupportDonate">Donate</string>
		<string name="SupportDonateText">Finally, if you would like to help this project grow by donating, you can do so via AlertPay. Every little bit helps!</string>
</resources>
