<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="#2a2a2a"
  android:orientation="vertical"
  android:layout_weight="1">
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		style="?android:attr/listSeparatorTextViewStyle"
  		android:text="@string/SingleItemEntry"
  		/>
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:id="@+id/singleItemBody"
  		/>

  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		style="?android:attr/listSeparatorTextViewStyle"
  		android:text="@string/SingleItemTimestamp"
  		/>
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:gravity="right"
  		android:id="@+id/singleItemDate"
  		android:text="Sunday, 21 December, 1992"
  		/>

  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		style="?android:attr/listSeparatorTextViewStyle"
  		android:text="@string/SingleItemTag"
  		/>
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:gravity="right"
  		android:id="@+id/singleItemTag"
  		/>

  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		style="?android:attr/listSeparatorTextViewStyle"
  		android:text="@string/SingleItemSameTag"
  		/>
</LinearLayout>